Hover effects and etc

--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ header {
     justify-content: center;
   }
 }
-@media (min-width: 56.5em) {
+@media (min-width: 56em) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -53,6 +53,7 @@ header {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 120px 1fr;
+  position: relative;
   background: linear-gradient(to left top, rgba(0, 77, 149, 0.8), rgba(0, 133, 255, 0.3));
   box-shadow: 0 0 1rem black;
   color: #E5E5E5;
@@ -80,26 +81,40 @@ header {
 }
 .cards .card .name {
   padding-bottom: 1rem;
-  font-size: 3rem;
+  font-size: 2rem;
   letter-spacing: 0.4rem;
 }
 .cards .card .ability, .cards .card .type {
   padding-bottom: 1rem;
 }
-@media (min-width: 87.5em) {
+@media (min-width: 56em) {
   .cards .card:hover > .overlay {
     opacity: 1;
-    display: inline-block;
   }
   .cards .card .overlay {
-    display: none;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 5%;
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: opacity 200ms ease-in-out;
   }
   .cards .card .overlay span {
     border: 2px solid #ffffff;
     padding: 1rem 3rem;
     color: #ffffff;
-    text-transform: uppercase;
     font-weight: 700;
     background: rgba(0, 0, 0, 0.5);
+  }
+  .cards .card .overlay span:hover {
+    background: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+    text-shadow: 1px 1px #000;
   }
 }
