--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,5 @@
 $breakpoint-sm: 41em;
-$breakpoint-md: 56.5em;
+$breakpoint-md: 56em;
 $breakpoint-lg: 67em;
 $breakpoint-xlg: 87.5em;
 
@@ -56,6 +56,8 @@ header {
     grid-template-columns: 1fr;
     grid-template-rows: 120px 1fr;
 
+    position: relative;
+
     background: linear-gradient(to left top, rgba(#004D95,0.8), rgba(#0085FF,0.3));
     box-shadow: 0 0 1rem black;
     color: #E5E5E5;
@@ -83,7 +85,7 @@ header {
 
     .name {
       padding-bottom: 1rem;
-      font-size: 3rem;
+      font-size: 2rem;
       letter-spacing: 0.4rem;
     }
 
@@ -91,22 +93,37 @@ header {
       padding-bottom: 1rem;
     }
 
-    @media (min-width: $breakpoint-xlg) {
+    @media (min-width: $breakpoint-md) {
       &:hover > .overlay {
         opacity: 1;
-        display: inline-block;
       }
       .overlay {
-        display: none;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+
+        position: absolute;
+        top: 0; right: 0; bottom: 0; left: 0;
+
+        border-radius: 5%;
+        opacity: 0;
+        background: rgba(0,0,0,0.5);
+
+        transition: opacity 200ms ease-in-out;
 
         span {
           border: 2px solid #ffffff;
           padding: 1rem 3rem ;
           color: #ffffff;
-          text-transform: uppercase;
           font-weight: 700;
 
           background: rgba(0,0,0,0.5);
+        }
+
+        span:hover {
+          background: rgba(255,255,255,0.5);
+          color: rgba(255,255,255,0.5);
+          text-shadow: 1px 1px #000;
         }
       }
     }
