--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   <% @pokemons.each do |pokemon| %>
     <a href="#" class="card">
       <div class="overlay">
-        <span>くわしくみる</span>
+        <span>ゲットする</span>
       </div>
       <img class="image" loading="lazy" src="images/<%= "#{pokemon["pokemon_no"].rjust(3, "0")}.png" %>">
       <div class="content">
