Add headers to the card

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,8 +7,14 @@
       <img class="image" loading="lazy" src="images/<%= "#{pokemon["pokemon_no"].rjust(3, "0")}.png" %>">
       <div class="content">
         <div class="name"><%= pokemon["name"] %></div>
-        <div class="ability"><%= pokemon["abilities"].to_s %></div>
-        <div class="type"><%= pokemon["types"].to_s %></div>
+        <div class="ability">
+          <span class="ability-header">のうりょく：</span>
+          <span class="ability-value"><%= pokemon["abilities"].to_s %></span>
+        </div>
+        <div class="type">
+          <span class="type-header">タイプ：</span>
+          <span class="type-value"><%= pokemon["types"].to_s %></span>
+        </div>
       </div>
     </a>
   <% end %>
