--- a/sass/index.scss
+++ b/sass/index.scss
@@ -62,6 +62,7 @@ header {
     box-shadow: 0 0 1rem black;
     color: #E5E5E5;
     text-align: center;
+    font-size: 1rem;
     border-radius: 5%;
 
     @media (min-width: $breakpoint-xlg) {
@@ -89,8 +90,21 @@ header {
       letter-spacing: 0.4rem;
     }
 
-    .ability, .type {
+    .attributes {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
       padding-bottom: 1rem;
+      .attribute-header {
+        grid-column: 1 / 2;
+      }
+
+      hr {
+        grid-column: 1 / 3;
+        border-bottom: solid 1px black;
+        max-width: 170px;
+        width: 100%;
+      }
     }
 
     @media (min-width: $breakpoint-md) {
