--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,17 @@
 </head>
 <body>
   <header>
-    <h1>ポケモンずかん</h1>
+    <h1 class="appname">ポケモンずかん</h1>
   </header>
-
+  <div id="monster-ball-1">
+    <div class="monster-ball-button"></div>
+  </div>
+  <div id="monster-ball-2">
+    <div class="monster-ball-button"></div>
+  </div>
+  <div id="monster-ball-3">
+    <div class="monster-ball-button"></div>
+  </div>
   <%= yield %>
 </body>
 </html>
