--- a/sass/index.scss
+++ b/sass/index.scss
@@ -6,16 +6,78 @@ $breakpoint-xlg: 87.5em;
 html {
   font-size: 100%;
   box-sizing: border-box;
+  height: 100%;
 }
 
 *, *::befere, *::after {
   box-sizing: inherit;
 }
 
+@mixin monster-ball {
+  background: linear-gradient(to right, rgba(#f60002, 1), rgba(#f60002, 0.4));
+  height: 10rem;
+  width: 10rem;
+  position: fixed;
+  border-radius: 50%;
+  overflow: hidden;
+  &::before {
+    content: "";
+    border: rgb(27, 26, 26) 10px solid;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
+    position: absolute;
+    top: 50%;
+    left: -10%;
+    height: 20vh;
+    width: 100vw;
+  }
+  .monster-ball-button {
+    background: rgb(27, 26, 26);
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 42%;
+    left: 42%;
+  }
+  @media (min-width: $breakpoint-sm) {
+    height: 20rem;
+    width: 20rem;
+    .monster-ball-button {
+      height: 4rem;
+      width: 4rem;
+    }
+  }
+}
+
+#monster-ball-1 {
+  @include monster-ball();
+  top: 10%;
+  left: 67%;
+  transform: rotate(10deg);
+}
+
+#monster-ball-2 {
+  @include monster-ball();
+  top: 40%;
+  left: 7%;
+  transform: rotate(-20deg);
+}
+
+#monster-ball-3 {
+  @include monster-ball();
+  top: 70%;
+  left: 50%;
+  transform: rotate(24deg);
+}
+
+
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  background: #FF8383;
+  background: linear-gradient(to right bottom, rgba(#FF8383, 0.3), rgba(#FF8383,1));
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: #ffffff;
   font-family: 'Noto Sans JP', Arial, Helvetica, sans-serif;
   font-size: 1.25rem;
@@ -27,6 +89,27 @@ a, a:visited {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 13%;
+  z-index: 10;
+
+  .appname {
+    color          : #ffffff;            /* 文字の色 */
+    font-size      : 3rem;               /* 文字のサイズ */
+    letter-spacing : 4px;                /* 文字間 */
+    text-shadow    :
+         2px  2px 1px #003366,
+        -2px  2px 1px #003366,
+         2px -2px 1px #003366,
+        -2px -2px 1px #003366,
+         2px  0px 1px #003366,
+         0px  2px 1px #003366,
+        -2px  0px 1px #003366,
+         0px -2px 1px #003366;        /* 文字の影 */
+  }
+}
+
   display: flex;
   justify-content: center;
 }
@@ -36,10 +119,11 @@ header {
   gap: 2rem;
 
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 20% auto 0;
   padding: 2rem;
 
   @media (min-width: $breakpoint-sm) {
+    margin: 5% auto 0;
     grid-template-columns: 300px;
     justify-content: center;
   }
@@ -50,7 +134,6 @@ header {
     grid-template-columns: repeat(3, 1fr);
   }
 
-
   .card {
     display: grid;
     grid-template-columns: 1fr;
@@ -58,11 +141,13 @@ header {
 
     position: relative;
 
-    background: linear-gradient(to left top, rgba(#004D95,0.8), rgba(#0085FF,0.3));
-    box-shadow: 0 0 1rem black;
-    color: #E5E5E5;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+    background-repeat: no-repeat;
+    box-shadow: 0 0 10px rgba(0,0,0, 0.4);
+    color: #1d1818;
     text-align: center;
     font-size: 1rem;
+    font-weight: 700;
     border-radius: 5%;
 
     @media (min-width: $breakpoint-xlg) {
@@ -88,6 +173,7 @@ header {
       padding-bottom: 1rem;
       font-size: 2rem;
       letter-spacing: 0.4rem;
+      text-shadow: 1px 1px rgba(255,255,255,0.6);
     }
 
     .attributes {
@@ -121,7 +207,7 @@ header {
 
         border-radius: 5%;
         opacity: 0;
-        background: rgba(0,0,0,0.5);
+        background: rgba(0,0,0,0.1);
 
         transition: opacity 200ms ease-in-out;
 
