Add footer button and adjust whole a lot more of responsiveness

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,5 +20,13 @@
     <div class="monster-ball-button"></div>
   </div>
   <%= yield %>
+  <footer>
+    <a class="button quiz" href="quiz">
+      クイズ
+    </a>
+    <a class="button collection">
+      マイポケモン
+    </a>
+  </footer>
 </body>
 </html>
