--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,17 @@ html {
   top: 42%;
   left: 42%;
 }
-@media (min-width: 41em) {
+@media (min-width: 56em) {
+  #monster-ball-1 {
+    height: 15rem;
+    width: 15rem;
+  }
+  #monster-ball-1 .monster-ball-button {
+    height: 3rem;
+    width: 3rem;
+  }
+}
+@media (min-width: 67em) {
   #monster-ball-1 {
     height: 20rem;
     width: 20rem;
@@ -80,7 +90,17 @@ html {
   top: 42%;
   left: 42%;
 }
-@media (min-width: 41em) {
+@media (min-width: 56em) {
+  #monster-ball-2 {
+    height: 15rem;
+    width: 15rem;
+  }
+  #monster-ball-2 .monster-ball-button {
+    height: 3rem;
+    width: 3rem;
+  }
+}
+@media (min-width: 67em) {
   #monster-ball-2 {
     height: 20rem;
     width: 20rem;
@@ -121,7 +141,17 @@ html {
   top: 42%;
   left: 42%;
 }
-@media (min-width: 41em) {
+@media (min-width: 56em) {
+  #monster-ball-3 {
+    height: 15rem;
+    width: 15rem;
+  }
+  #monster-ball-3 .monster-ball-button {
+    height: 3rem;
+    width: 3rem;
+  }
+}
+@media (min-width: 67em) {
   #monster-ball-3 {
     height: 20rem;
     width: 20rem;
@@ -162,14 +192,58 @@ header .appname {
   /* 文字のサイズ */
   letter-spacing: 4px;
   /* 文字間 */
-  text-shadow: 2px 2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, -2px -2px 1px #003366, 2px 0px 1px #003366, 0px 2px 1px #003366, -2px 0px 1px #003366, 0px -2px 1px #003366;
+  text-shadow: -2px 2px 1px #003366, 2px -2px 1px #003366, -2px -2px 1px #003366, 0px -2px 1px #003366;
   /* 文字の影 */
 }
 
 footer {
-  background: black;
   display: flex;
   justify-content: space-around;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 4rem;
+  padding-bottom: 0.9rem;
+  padding-top: 0.9rem;
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  border-radius: 5%;
+}
+footer .button {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-shadow: 0 0 2px #003366, 0 0 2px #003366, 0 0 2px #003366, 0 0 2px #003366, 0 0 2px #003366, 0 0 2px #003366, 0 0 2px #003366;
+  width: 100%;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 100%;
+  padding-top: 1rem;
+}
+footer .button.quiz {
+  background-color: #c8ffcb;
+  border-bottom: 6px solid #8fb891;
+}
+footer .button.quiz:active {
+  margin-top: 7px;
+  background: #c8ffcb;
+  border-bottom: 2px solid #8fb891;
+}
+footer .button.collection {
+  background-color: #f7ed94;
+  border-bottom: 6px solid #b3aa62;
+}
+footer .button.collection:active {
+  margin-top: 7px;
+  background: #f7ed94;
+  border-bottom: 2px solid #b3aa62;
+}
+@media (min-width: 67em) {
+  footer {
+    display: none;
+  }
 }
 
 .cards {
@@ -177,29 +251,30 @@ footer {
   gap: 2rem;
   max-width: 1000px;
   margin: 20% auto 0;
-  padding: 2rem;
+  padding: 2rem 2rem 8rem;
 }
 @media (min-width: 41em) {
   .cards {
-    margin: 5% auto 0;
-    grid-template-columns: 300px;
+    margin: 15% auto 0;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
   }
 }
 @media (min-width: 56em) {
   .cards {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (min-width: 67em) {
   .cards {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 5%;
   }
 }
 .cards .card {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 120px 1fr;
+  grid-template-rows: 140px 1fr;
   position: relative;
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   background-repeat: no-repeat;
@@ -218,8 +293,8 @@ footer {
 .cards .card .image {
   grid-column: 1/2;
   grid-row: 1/2;
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
   background: no-repeat center center/cover;
   margin: 0 auto;
 }
@@ -242,12 +317,24 @@ footer {
 }
 .cards .card .attributes .attribute-header {
   grid-column: 1/2;
+  padding-left: 3rem;
+}
+.cards .card .attributes .attribute-value {
+  padding-right: 3rem;
 }
 .cards .card .attributes hr {
   grid-column: 1/3;
   border-bottom: solid 1px black;
-  max-width: 170px;
+  max-width: 270px;
   width: 100%;
+}
+@media (min-width: 41em) {
+  .cards .card .attributes hr {
+    max-width: 170px;
+  }
+}
+.cards .card .overlay {
+  display: none;
 }
 @media (min-width: 56em) {
   .cards .card:hover > .overlay {
