--- a/sass/index.scss
+++ b/sass/index.scss
@@ -39,7 +39,15 @@ html {
     top: 42%;
     left: 42%;
   }
-  @media (min-width: $breakpoint-sm) {
+  @media (min-width: $breakpoint-md) {
+    height: 15rem;
+    width: 15rem;
+    .monster-ball-button {
+      height: 3rem;
+      width: 3rem;
+    }
+  }
+  @media (min-width: $breakpoint-lg) {
     height: 20rem;
     width: 20rem;
     .monster-ball-button {
@@ -99,19 +107,70 @@ header {
     font-size      : 3rem;               /* 文字のサイズ */
     letter-spacing : 4px;                /* 文字間 */
     text-shadow    :
-         2px  2px 1px #003366,
         -2px  2px 1px #003366,
          2px -2px 1px #003366,
         -2px -2px 1px #003366,
-         2px  0px 1px #003366,
-         0px  2px 1px #003366,
-        -2px  0px 1px #003366,
          0px -2px 1px #003366;        /* 文字の影 */
   }
 }
 
+footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 4rem;
+  padding-bottom: 0.9rem;
+  padding-top: 0.9rem;
+
+  background: linear-gradient(to bottom right, rgba(255,255,255,0.6), rgba(255,255,255,0.9));
+  border-radius: 5%;
+
+  .button {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-shadow:
+      0 0 2px  #003366,
+      0 0 2px  #003366,
+      0 0 2px  #003366,
+      0 0 2px  #003366,
+      0 0 2px  #003366,
+      0 0 2px  #003366,
+      0 0 2px  #003366;
+
+    width: 100%;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    line-height: 100%;
+    padding-top: 1rem;
+
+    &.quiz {
+      background-color: #c8ffcb;
+      border-bottom: 6px solid #8fb891;
+      &:active {
+        margin-top: 7px;
+        background: #c8ffcb;
+        border-bottom: 2px solid #8fb891;
+      }
+    }
+    &.collection {
+      background-color: #f7ed94;
+      border-bottom: 6px solid #b3aa62;
+      &:active {
+        margin-top: 7px;
+        background: #f7ed94;
+        border-bottom: 2px solid #b3aa62;
+      }
+    }
+  }
+  @media (min-width: $breakpoint-lg) {
+    display: none;
+  }
 }
 
 .cards {
@@ -120,24 +179,25 @@ header {
 
   max-width: 1000px;
   margin: 20% auto 0;
-  padding: 2rem;
+  padding: 2rem 2rem 8rem;
 
   @media (min-width: $breakpoint-sm) {
-    margin: 5% auto 0;
-    grid-template-columns: 300px;
+    margin: 15% auto 0;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
   }
   @media (min-width: $breakpoint-md) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
   @media (min-width: $breakpoint-lg) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 5%;
   }
 
   .card {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 120px 1fr;
+    grid-template-rows: 140px 1fr;
 
     position: relative;
 
@@ -158,8 +218,8 @@ header {
       grid-column: 1 / 2;
       grid-row: 1 / 2;
 
-      height: 100px;
-      width: 100px;
+      height: 150px;
+      width: 150px;
       background: no-repeat center center/cover;
       margin: 0 auto;
 
@@ -181,18 +241,28 @@ header {
       grid-template-columns: 1fr 1fr;
 
       padding-bottom: 1rem;
+
       .attribute-header {
         grid-column: 1 / 2;
+        padding-left: 3rem;
+      }
+      .attribute-value {
+        padding-right: 3rem;
       }
 
       hr {
         grid-column: 1 / 3;
         border-bottom: solid 1px black;
-        max-width: 170px;
+        max-width: 270px;
         width: 100%;
+        @media (min-width: $breakpoint-sm) {
+          max-width: 170px;
+        }
       }
     }
-
+    .overlay {
+      display: none;
+    }
     @media (min-width: $breakpoint-md) {
       &:hover > .overlay {
         opacity: 1;
