Move fotter buttons to index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -29,3 +29,11 @@
     </a>
   <% end %>
 </section>
+<footer>
+  <a class="button quiz-button" href="quiz">
+    クイズ
+  </a>
+  <a class="button collection-button">
+    マイポケモン
+  </a>
+</footer>
