--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "DotGothic16";
+  font-style: normal;
+  font-weight: normal;
+  src: url(DotGothic16-Regular.ttf);
+}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -222,20 +228,20 @@ footer .button {
   line-height: 100%;
   padding-top: 1rem;
 }
-footer .button.quiz {
+footer .button.quiz-button {
   background-color: #c8ffcb;
   border-bottom: 6px solid #8fb891;
 }
-footer .button.quiz:active {
+footer .button.quiz-button:active {
   margin-top: 7px;
   background: #c8ffcb;
   border-bottom: 2px solid #8fb891;
 }
-footer .button.collection {
+footer .button.collection-button {
   background-color: #f7ed94;
   border-bottom: 6px solid #b3aa62;
 }
-footer .button.collection:active {
+footer .button.collection-button:active {
   margin-top: 7px;
   background: #f7ed94;
   border-bottom: 2px solid #b3aa62;
@@ -366,4 +372,38 @@ footer .button.collection:active {
     color: rgba(255, 255, 255, 0.5);
     text-shadow: 1px 1px #000;
   }
+}
+
+.quiz {
+  display: grid;
+  position: relative;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50vh 1fr;
+  justify-items: center;
+  align-items: center;
+}
+.quiz .image {
+  grid-row: 1/2;
+  height: 300px;
+  width: 300px;
+  margin-top: 20%;
+}
+.quiz .options {
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+  border-radius: 10px;
+  width: 90%;
+  font-family: DotGothic16;
+}
+.quiz .options .option {
+  padding: 2rem 0 2rem 3rem;
+  color: white;
+  letter-spacing: 2px;
+}
+.quiz .options .option:active {
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
+  color: black;
 }
