--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,6 +3,13 @@ $breakpoint-md: 56em;
 $breakpoint-lg: 67em;
 $breakpoint-xlg: 87.5em;
 
+@font-face {
+  font-family: "DotGothic16";
+  font-style: normal;
+  font-weight: normal;
+  src: url(DotGothic16-Regular.ttf);
+}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -149,7 +156,7 @@ footer {
     line-height: 100%;
     padding-top: 1rem;
 
-    &.quiz {
+    &.quiz-button {
       background-color: #c8ffcb;
       border-bottom: 6px solid #8fb891;
       &:active {
@@ -158,7 +165,7 @@ footer {
         border-bottom: 2px solid #8fb891;
       }
     }
-    &.collection {
+    &.collection-button {
       background-color: #f7ed94;
       border-bottom: 6px solid #b3aa62;
       &:active {
@@ -295,6 +302,49 @@ footer {
           color: rgba(255,255,255,0.5);
           text-shadow: 1px 1px #000;
         }
+      }
+    }
+  }
+}
+
+
+.quiz {
+  display: grid;
+  position: relative;
+
+  grid-template-columns: 1fr;
+  grid-template-rows: 50vh 1fr;
+
+  justify-items: center;
+  align-items: center;
+
+  .image {
+    grid-row: 1 / 2;
+    height: 300px;
+    width: 300px;
+    margin-top: 20%;
+  }
+
+  .options {
+    grid-row: 2 / 3;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+
+    background: linear-gradient(to bottom right, rgba(0,0,0,0.8), rgba(0,0,0,0.5));
+
+    border-radius: 10px;
+    width: 90%;
+
+    font-family: DotGothic16;
+    .option {
+      padding: 2rem 0 2rem 3rem;
+      color: white;
+      letter-spacing: 2px;
+      &:active {
+        background: linear-gradient(to bottom right, rgba(255,255,255,0.8), rgba(255,255,255,0.5));;
+        color: black;
       }
     }
   }
