--- a/sass/index.scss
+++ b/sass/index.scss
@@ -106,12 +106,12 @@ a, a:visited {
 header {
   position: fixed;
   top: 0;
-  left: 13%;
+  left: 19%;
   z-index: 10;
 
   .appname {
     color          : #ffffff;            /* 文字の色 */
-    font-size      : 3rem;               /* 文字のサイズ */
+    font-size      : 2.4rem;               /* 文字のサイズ */
     letter-spacing : 4px;                /* 文字間 */
     text-shadow    :
         -2px  2px 1px #003366,
@@ -313,16 +313,17 @@ footer {
   position: relative;
 
   grid-template-columns: 1fr;
-  grid-template-rows: 50vh 1fr;
+  grid-template-rows: auto auto;
 
   justify-items: center;
-  align-items: center;
+
+  height: 100%;
 
   .image {
-    grid-row: 1 / 2;
-    height: 300px;
-    width: 300px;
-    margin-top: 20%;
+    max-height: 16rem;
+    max-width: 16rem;
+    margin-top: 27%;
+    align-self: center;
   }
 
   .options {
@@ -331,6 +332,8 @@ footer {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 1fr);
+    align-self: end;
+    margin-bottom: 30%;
 
     background: linear-gradient(to bottom right, rgba(0,0,0,0.8), rgba(0,0,0,0.5));
 
@@ -339,7 +342,7 @@ footer {
 
     font-family: DotGothic16;
     .option {
-      padding: 2rem 0 2rem 3rem;
+      padding: 1.2rem 0 1.2rem 3rem;
       color: white;
       letter-spacing: 2px;
       &:active {
