--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: "DotGothic16";
   font-style: normal;
@@ -188,18 +187,14 @@ a, a:visited {
 header {
   position: fixed;
   top: 0;
-  left: 19%;
   z-index: 10;
+  transform: translate(calc(50vw - 50%));
 }
 header .appname {
   color: #ffffff;
-  /* 文字の色 */
   font-size: 2.4rem;
-  /* 文字のサイズ */
   letter-spacing: 4px;
-  /* 文字間 */
   text-shadow: -2px 2px 1px #003366, 2px -2px 1px #003366, -2px -2px 1px #003366, 0px -2px 1px #003366;
-  /* 文字の影 */
 }
 
 footer {
