--- a/sass/index.scss
+++ b/sass/index.scss
@@ -106,18 +106,17 @@ a, a:visited {
 header {
   position: fixed;
   top: 0;
-  left: 19%;
   z-index: 10;
-
+  transform: translate(calc(50vw - 50%));
   .appname {
-    color          : #ffffff;            /* 文字の色 */
-    font-size      : 2.4rem;               /* 文字のサイズ */
-    letter-spacing : 4px;                /* 文字間 */
-    text-shadow    :
+    color: #ffffff;
+    font-size: 2.4rem;
+    letter-spacing: 4px;
+    text-shadow:
         -2px  2px 1px #003366,
          2px -2px 1px #003366,
         -2px -2px 1px #003366,
-         0px -2px 1px #003366;        /* 文字の影 */
+         0px -2px 1px #003366;
   }
 }
 
