--- a/sass/index.scss
+++ b/sass/index.scss
@@ -137,7 +137,7 @@ footer {
 
   .button {
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 0.9rem;
     font-weight: 700;
     letter-spacing: 2px;
     text-shadow:
@@ -152,8 +152,19 @@ footer {
     width: 100%;
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-    line-height: 100%;
     padding-top: 1rem;
+    display: flex;
+    justify-content: center;
+
+    img {
+      height: auto;
+      align-self: start;
+      margin-right: 1rem;
+    }
+
+    div {
+      padding-top: 0.4rem;
+    }
 
     &.quiz-button {
       background-color: #c8ffcb;
