--- a/views/index.erb
+++ b/views/index.erb
@@ -31,9 +31,11 @@
 </section>
 <footer>
   <a class="button quiz-button" href="quiz">
-    クイズ
+    <img src="icons/gamepad.svg" id="quiz-icon" alt="">
+    <div>クイズ</div>
   </a>
   <a class="button collection-button">
-    マイポケモン
+    <img src="icons/book.svg" id="collection-icon" alt="">
+    <div>マイポケモン</div>
   </a>
 </footer>
