--- a/public/style.css
+++ b/public/style.css
@@ -190,7 +190,7 @@ header {
   z-index: 10;
   transform: translate(calc(50vw - 50%));
 }
-header .appname {
+header .page-title {
   color: #ffffff;
   font-size: 2.4rem;
   letter-spacing: 4px;
