--- a/sass/index.scss
+++ b/sass/index.scss
@@ -108,7 +108,7 @@ header {
   top: 0;
   z-index: 10;
   transform: translate(calc(50vw - 50%));
-  .appname {
+  .page-title {
     color: #ffffff;
     font-size: 2.4rem;
     letter-spacing: 4px;
