--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ポケモン図鑑</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1 class="appname">ポケモンずかん</h1>
+    <h1 class="page-title"><%= @page_title %></h1>
   </header>
   <div id="monster-ball-1">
     <div class="monster-ball-button"></div>
