Update bunch of things

--- a/views/index.erb
+++ b/views/index.erb
@@ -29,13 +29,4 @@
     </a>
   <% end %>
 </section>
-<footer>
-  <a class="button quiz-button" href="quiz">
-    <img src="icons/gamepad.svg" id="quiz-icon" alt="">
-    <div>クイズ</div>
-  </a>
-  <a class="button collection-button">
-    <img src="icons/book.svg" id="collection-icon" alt="">
-    <div>マイポケモン</div>
-  </a>
-</footer>
+<%= erb :footer %>
