--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -7,8 +7,4 @@
     <a class="option" href="#">ほげほげ</a>
   </div>
 </section>
-<footer>
-  <a class="button collection-button" href="/">
-    トップにもどる
-  </a>
-</footer>
+<%= erb :footer %>
