--- a/sass/index.scss
+++ b/sass/index.scss
@@ -136,18 +136,16 @@ footer {
   border-radius: 5%;
 
   .button {
-    color: #fff;
-    font-size: 0.9rem;
+    font-family: DotGothic16;
+    color: #000;
+    font-size: 1.1rem;
     font-weight: 700;
     letter-spacing: 2px;
     text-shadow:
-      0 0 2px  #003366,
-      0 0 2px  #003366,
-      0 0 2px  #003366,
-      0 0 2px  #003366,
-      0 0 2px  #003366,
-      0 0 2px  #003366,
-      0 0 2px  #003366;
+      0 0 2px  #fff,
+      0 0 2px  #fff,
+      0 0 2px  #fff,
+      0 0 2px  #fff;
 
     width: 100%;
     margin-left: 0.5rem;
