--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -1,10 +1,4 @@
-<section class="quiz">
-  <img class="image" loading="lazy" src="images/012.png">
-  <div class="options">
-    <a class="option" href="#">ほげほげ</a>
-    <a class="option" href="#">ほげほげ</a>
-    <a class="option" href="#">ほげほげ</a>
-    <a class="option" href="#">ほげほげ</a>
-  </div>
-</section>
+<section class="quiz"></section>
+<script src="js/quiz.js"></script>
+
 <%= erb :footer %>
