--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,10 +10,12 @@
   <!-- jQuery Modal -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+  <link rel=”icon” href=“favicon.ico”>
 </head>
 <body>
   <header>
     <h1 class="page-title"><%= @page_title %></h1>
+    <div class="bread-crumbs"></div>
   </header>
   <div id="monster-ball-1">
     <div class="monster-ball-button"></div>
