--- a/public/style.css
+++ b/public/style.css
@@ -383,9 +383,8 @@ footer .button.collection-button:active {
   display: grid;
   position: relative;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: 60vh auto;
   justify-items: center;
-  height: 100%;
 }
 .quiz .image {
   max-height: 16rem;
@@ -396,23 +395,25 @@ footer .button.collection-button:active {
 .quiz .options {
   grid-row: 2/3;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 1fr);
-  align-self: end;
-  margin-bottom: 30%;
+  grid-template-rows: repeat(4, auto);
+  margin-top: 3vh;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
   border-radius: 10px;
   width: 90%;
   font-family: DotGothic16;
 }
 .quiz .options .option {
-  padding: 1.2rem 0 1.2rem 3rem;
+  padding: 1.2vh 0 1.2vh 3vh;
   color: white;
   letter-spacing: 2px;
 }
 .quiz .options .option:active {
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
   color: black;
+}
+
+.bread-crumbs {
+  color: #1b1a1a;
 }
 
 #result-modal {
