--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <section class="cards">
   <% @pokemons.each do |pokemon| %>
-    <a href="#" class="card">
+    <div class="card">
       <div class="overlay">
         <span>しらべる</span>
       </div>
@@ -26,7 +26,7 @@
           </span>
         </div>
       </div>
-    </a>
+    </div>
   <% end %>
 </section>
 <%= erb :footer %>
