--- a/public/style.css
+++ b/public/style.css
@@ -398,6 +398,7 @@ footer .button.collection-button:active {
   grid-template-rows: repeat(4, auto);
   margin-top: 3vh;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+  backdrop-filter: blur(10px);
   border-radius: 10px;
   width: 90%;
   font-family: DotGothic16;
@@ -410,6 +411,24 @@ footer .button.collection-button:active {
 .quiz .options .option:active {
   background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
   color: black;
+}
+.quiz .summary {
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+  border-radius: 10px;
+  width: 90%;
+  margin-top: 30%;
+  font-family: DotGothic16;
+  letter-spacing: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.quiz .summary .result-lost {
+  color: #5477e7;
+}
+.quiz .summary .result-won {
+  color: #61e261;
 }
 
 .bread-crumbs {
