--- a/public/style.css
+++ b/public/style.css
@@ -288,6 +288,7 @@ footer .button.collection-button:active {
   grid-template-rows: 140px 1fr;
   position: relative;
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
   background-repeat: no-repeat;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   color: #1d1818;
@@ -414,6 +415,7 @@ footer .button.collection-button:active {
 }
 .quiz .summary {
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+  backdrop-filter: blur(10px);
   border-radius: 10px;
   width: 90%;
   margin-top: 30%;
