--- a/sass/index.scss
+++ b/sass/index.scss
@@ -45,6 +45,16 @@ html {
     position: absolute;
     top: 42%;
     left: 42%;
+    &::before {
+      content: "";
+      background: linear-gradient(to right bottom, rgba(246, 0, 2, 1), rgba(246, 0, 2, 0.1));
+      border-radius: 50%;
+      position: absolute;
+      top: 30%;
+      left: 30%;
+      height: 1rem;
+      width: 1rem;
+    }
   }
   @media (min-width: $breakpoint-md) {
     height: 15rem;
@@ -52,6 +62,10 @@ html {
     .monster-ball-button {
       height: 3rem;
       width: 3rem;
+      &::before{
+        height: 1.3rem;
+        width: 1.3rem;
+      }
     }
   }
   @media (min-width: $breakpoint-lg) {
@@ -60,6 +74,10 @@ html {
     .monster-ball-button {
       height: 4rem;
       width: 4rem;
+      &::before{
+        height: 1.7rem;
+        width: 1.7rem;
+      }
     }
   }
 }
