--- a/sass/index.scss
+++ b/sass/index.scss
@@ -20,6 +20,26 @@ html {
   box-sizing: inherit;
 }
 
+@mixin glass-background-dark {
+  background: linear-gradient(to bottom right, rgba(0,0,0,0.8), rgba(0,0,0,0.5));
+  backdrop-filter: blur(10px);
+}
+
+@mixin glass-background {
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
+}
+
+@mixin emphasized-font {
+  color: #ffffff;
+  letter-spacing: 4px;
+  text-shadow:
+      -2px  2px 1px #003366,
+       2px -2px 1px #003366,
+      -2px -2px 1px #003366,
+       0px -2px 1px #003366;
+}
+
 @mixin monster-ball {
   background: linear-gradient(to right, rgba(#f60002, 1), rgba(#f60002, 0.4));
   height: 10rem;
@@ -127,14 +147,8 @@ header {
   z-index: 10;
   transform: translate(calc(50vw - 50%));
   .page-title {
-    color: #ffffff;
+    @include emphasized-font;
     font-size: 2.4rem;
-    letter-spacing: 4px;
-    text-shadow:
-        -2px  2px 1px #003366,
-         2px -2px 1px #003366,
-        -2px -2px 1px #003366,
-         0px -2px 1px #003366;
   }
 }
 
@@ -234,8 +248,7 @@ footer {
 
     position: relative;
 
-    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
-    backdrop-filter: blur(3px);
+    @include glass-background;
     background-repeat: no-repeat;
     box-shadow: 0 0 10px rgba(0,0,0, 0.4);
     color: #1d1818;
@@ -359,8 +372,7 @@ footer {
 
     margin-top: 3vh;
 
-    background: linear-gradient(to bottom right, rgba(0,0,0,0.8), rgba(0,0,0,0.5));
-    backdrop-filter: blur(10px);
+    @include glass-background-dark;
 
     border-radius: 10px;
     width: 90%;
@@ -378,8 +390,7 @@ footer {
   }
 
   .summary {
-    background: linear-gradient(to bottom right, rgba(0,0,0,0.8), rgba(0,0,0,0.5));
-    backdrop-filter: blur(10px);
+    @include glass-background-dark;
     border-radius: 10px;
     width: 90%;
     margin-top: 30%;
