--- a/views/my_pokemon.erb
+++ b/views/my_pokemon.erb
@@ -1,12 +1,16 @@
 <section class="my-pokemon-stats">
   <h2>これまでにゲットしたポケモンの数</h2>
-  <p>??? / <%= @pokemon_count %></p>
+  <p><%= @my_pokemon_count %> / <%= @pokemon_count %></p>
 </section>
 <section class="my-pokemons">
   <% @pokemon_count.times do |index| %>
     <%= next if index == 0 %>
     <div class="pokemon">
-      <img src="icons/unknown.svg" alt="pokemon image">
+      <% if @my_pokemons.include? index %>
+        <img src="images/<%= "#{index.to_s.rjust(3, "0")}.png" %>" alt="pokemon image">
+      <% else %>
+        <img src="icons/unknown.svg" alt="pokemon image">
+      <% end %>
       <h2><%= index %></h2>
     </div>
   <% end %>
