Adjust the monster ball style

--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ html {
   border-radius: 50%;
   overflow: hidden;
   top: 10%;
-  left: 67%;
+  left: 59%;
   transform: rotate(10deg);
 }
 #monster-ball-1::before {
@@ -46,11 +46,11 @@ html {
 }
 #monster-ball-1 .monster-ball-button::before {
   content: "";
-  background: linear-gradient(to right bottom, #f60002, rgba(246, 0, 2, 0.1));
+  background: linear-gradient(to right bottom, #ffb7b7, rgba(255, 183, 183, 0.6));
   border-radius: 50%;
   position: absolute;
-  top: 30%;
-  left: 30%;
+  top: 25%;
+  left: 25%;
   height: 1rem;
   width: 1rem;
 }
@@ -66,6 +66,8 @@ html {
   #monster-ball-1 .monster-ball-button::before {
     height: 1.3rem;
     width: 1.3rem;
+    top: 30%;
+    left: 30%;
   }
 }
 @media (min-width: 67em) {
@@ -80,6 +82,11 @@ html {
   #monster-ball-1 .monster-ball-button::before {
     height: 1.7rem;
     width: 1.7rem;
+  }
+}
+@media (min-width: 56em) {
+  #monster-ball-1 {
+    left: 67%;
   }
 }
 
@@ -115,11 +122,11 @@ html {
 }
 #monster-ball-2 .monster-ball-button::before {
   content: "";
-  background: linear-gradient(to right bottom, #f60002, rgba(246, 0, 2, 0.1));
+  background: linear-gradient(to right bottom, #ffb7b7, rgba(255, 183, 183, 0.6));
   border-radius: 50%;
   position: absolute;
-  top: 30%;
-  left: 30%;
+  top: 25%;
+  left: 25%;
   height: 1rem;
   width: 1rem;
 }
@@ -135,6 +142,8 @@ html {
   #monster-ball-2 .monster-ball-button::before {
     height: 1.3rem;
     width: 1.3rem;
+    top: 30%;
+    left: 30%;
   }
 }
 @media (min-width: 67em) {
@@ -184,11 +193,11 @@ html {
 }
 #monster-ball-3 .monster-ball-button::before {
   content: "";
-  background: linear-gradient(to right bottom, #f60002, rgba(246, 0, 2, 0.1));
+  background: linear-gradient(to right bottom, #ffb7b7, rgba(255, 183, 183, 0.6));
   border-radius: 50%;
   position: absolute;
-  top: 30%;
-  left: 30%;
+  top: 25%;
+  left: 25%;
   height: 1rem;
   width: 1rem;
 }
@@ -204,6 +213,8 @@ html {
   #monster-ball-3 .monster-ball-button::before {
     height: 1.3rem;
     width: 1.3rem;
+    top: 30%;
+    left: 30%;
   }
 }
 @media (min-width: 67em) {
