Modularize quiz.js

--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -1,5 +1,5 @@
 <section class="quiz"></section>
-<script src="js/quiz.js"></script>
+<script type="module" src="js/quiz/index.js"></script>
 <script src="js/utterance.js"></script>
 
 <%= erb :footer %>
