--- a/views/index.erb
+++ b/views/index.erb
@@ -29,5 +29,5 @@
     </div>
   <% end %>
 </section>
-<script src="js/utterance.js"></script>
+<script type="module" src="js/home/index.js"></script>
 <%= erb :footer %>
