--- a/sass/index.scss
+++ b/sass/index.scss
@@ -267,6 +267,13 @@ footer {
       grid-template-rows: 190px 1fr;
     }
 
+    .audio-indicator {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 1rem;
+    }
+
     .image {
       grid-column: 1 / 2;
       grid-row: 1 / 2;
