--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,7 @@
       <div class="overlay">
         <span>しらべる</span>
       </div>
+      <img src="icons/no-audio.svg" class="audio-indicator">
       <img class="image" loading="lazy" src="images/<%= "#{pokemon["pokemon_no"].to_s.rjust(3, "0")}.png" %>">
       <div class="content">
         <div class="name utterable" data-utterable-text="<%= pokemon["name"] %>"><%= pokemon["name"] %></div>
