--- a/sass/index.scss
+++ b/sass/index.scss
@@ -370,11 +370,20 @@ footer {
 
   justify-items: center;
 
-  .image {
-    max-height: 16rem;
-    max-width: 16rem;
+  .image-container {
+    grid-row: 1 / 2;
     margin-top: 27%;
     align-self: center;
+    position: relative;
+    .image {
+      max-height: 16rem;
+      max-width: 16rem;
+    }
+    .audio-indicator {
+      position: absolute;
+      top: -10%;
+      left: -10%;
+    }
   }
 
   .options {
