--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: "DotGothic16";
-  font-style: normal;
-  font-weight: normal;
-  src: url(DotGothic16-Regular.ttf);
-}
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -12,6 +6,103 @@ html {
 
 *, *::befere, *::after {
   box-sizing: inherit;
+}
+
+@font-face {
+  font-family: "DotGothic16";
+  font-style: normal;
+  font-weight: normal;
+  src: url(DotGothic16-Regular.ttf);
+}
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to right bottom, rgba(255, 131, 131, 0.3), #ff8383);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: #ffffff;
+  font-family: "Noto Sans JP", Arial, Helvetica, sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.3;
+}
+
+a, a:visited {
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  transform: translate(calc(50vw - 50%));
+}
+header .page-title {
+  color: #ffffff;
+  letter-spacing: 4px;
+  text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
+  font-size: 2.4rem;
+  margin: 1.1rem 0;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 4rem;
+  padding-bottom: 0.9rem;
+  padding-top: 0.9rem;
+  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  border-radius: 5%;
+}
+footer .button {
+  font-family: DotGothic16;
+  color: #000;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff;
+  width: 100%;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+footer .button img {
+  height: auto;
+  align-self: start;
+  margin-right: 1rem;
+}
+footer .button div {
+  padding-top: 0.4rem;
+}
+footer .button.quiz-button {
+  background-color: #c8ffcb;
+  border-bottom: 6px solid #8fb891;
+}
+footer .button.quiz-button:active {
+  margin-top: 7px;
+  background: #c8ffcb;
+  border-bottom: 2px solid #8fb891;
+}
+footer .button.collection-button {
+  background-color: #f7ed94;
+  border-bottom: 6px solid #b3aa62;
+}
+footer .button.collection-button:active {
+  margin-top: 7px;
+  background: #f7ed94;
+  border-bottom: 2px solid #b3aa62;
+}
+@media (min-width: 67em) {
+  footer {
+    display: none;
+  }
 }
 
 #monster-ball-1 {
@@ -229,97 +320,6 @@ html {
   #monster-ball-3 .monster-ball-button::before {
     height: 1.7rem;
     width: 1.7rem;
-  }
-}
-
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(to right bottom, rgba(255, 131, 131, 0.3), #ff8383);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  color: #ffffff;
-  font-family: "Noto Sans JP", Arial, Helvetica, sans-serif;
-  font-size: 1.25rem;
-  line-height: 1.3;
-}
-
-a, a:visited {
-  text-decoration: none;
-}
-
-header {
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  transform: translate(calc(50vw - 50%));
-}
-header .page-title {
-  color: #ffffff;
-  letter-spacing: 4px;
-  text-shadow: -2px 2px 1px #003366, 2px -2px 1px #003366, -2px -2px 1px #003366, 0px -2px 1px #003366;
-  font-size: 2.4rem;
-  margin: 1.1rem 0;
-}
-
-footer {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 4rem;
-  padding-bottom: 0.9rem;
-  padding-top: 0.9rem;
-  background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
-  border-radius: 5%;
-}
-footer .button {
-  font-family: DotGothic16;
-  color: #000;
-  font-size: 1.1rem;
-  font-weight: 700;
-  letter-spacing: 2px;
-  text-shadow: 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff, 0 0 2px #fff;
-  width: 100%;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  padding-top: 1rem;
-  display: flex;
-  justify-content: center;
-}
-footer .button img {
-  height: auto;
-  align-self: start;
-  margin-right: 1rem;
-}
-footer .button div {
-  padding-top: 0.4rem;
-}
-footer .button.quiz-button {
-  background-color: #c8ffcb;
-  border-bottom: 6px solid #8fb891;
-}
-footer .button.quiz-button:active {
-  margin-top: 7px;
-  background: #c8ffcb;
-  border-bottom: 2px solid #8fb891;
-}
-footer .button.collection-button {
-  background-color: #f7ed94;
-  border-bottom: 6px solid #b3aa62;
-}
-footer .button.collection-button:active {
-  margin-top: 7px;
-  background: #f7ed94;
-  border-bottom: 2px solid #b3aa62;
-}
-@media (min-width: 67em) {
-  footer {
-    display: none;
   }
 }
 
@@ -567,7 +567,7 @@ footer .button.collection-button:active {
 .my-pokemons .pokemon h2 {
   color: #ffffff;
   letter-spacing: 4px;
-  text-shadow: -2px 2px 1px #003366, 2px -2px 1px #003366, -2px -2px 1px #003366, 0px -2px 1px #003366;
+  text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
   position: absolute;
   bottom: 10%;
   right: 20%;
