--- a/public/style.css
+++ b/public/style.css
@@ -369,10 +369,15 @@ footer .button.collection-button:active {
   }
 }
 .cards .card .audio-indicator {
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
+  padding: 0.3rem;
+  margin: 0.5rem;
+  border-radius: 50%;
+  box-shadow: 0 0 3px black;
   position: absolute;
   top: 0;
   left: 0;
-  padding: 1rem;
 }
 .cards .card .image {
   grid-column: 1/2;
@@ -470,6 +475,11 @@ footer .button.collection-button:active {
   max-width: 16rem;
 }
 .quiz .image-container .audio-indicator {
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
+  backdrop-filter: blur(3px);
+  padding: 0.5rem;
+  border-radius: 50%;
+  box-shadow: 0 0 3px black;
   position: absolute;
   top: -10%;
   left: -10%;
@@ -483,6 +493,7 @@ footer .button.collection-button:active {
   backdrop-filter: blur(10px);
   border-radius: 10px;
   width: 90%;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   font-family: DotGothic16;
 }
 .quiz .options .option {
@@ -497,6 +508,7 @@ footer .button.collection-button:active {
 .quiz .summary {
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
   backdrop-filter: blur(10px);
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
   width: 90%;
   margin-top: 30%;
@@ -533,6 +545,7 @@ footer .button.collection-button:active {
   text-align: center;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
   backdrop-filter: blur(10px);
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
 }
 .my-pokemon-stats * {
@@ -561,6 +574,7 @@ footer .button.collection-button:active {
   width: auto;
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   border-radius: 50%;
   padding: 1rem;
 }
