--- a/sass/cards/_index.scss
+++ b/sass/cards/_index.scss
@@ -40,10 +40,14 @@
     }
 
     .audio-indicator {
+      @include glass-background;
+      padding: 0.3rem;
+      margin: 0.5rem;
+      border-radius: 50%;
+      box-shadow: 0 0 3px black;
       position: absolute;
       top: 0;
       left: 0;
-      padding: 1rem;
     }
 
     .image {
