Adjust the space below options in quiz

--- a/sass/quiz/_index.scss
+++ b/sass/quiz/_index.scss
@@ -34,6 +34,7 @@
     grid-template-rows: repeat(4, auto);
 
     margin-top: 3vh;
+    margin-bottom: 30vh;
 
     @include glass-background-dark;
 
