--- a/public/style.css
+++ b/public/style.css
@@ -489,6 +489,7 @@ footer .button.collection-button:active {
   display: grid;
   grid-template-rows: repeat(4, auto);
   margin-top: 3vh;
+  margin-bottom: 30vh;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
   backdrop-filter: blur(10px);
   border-radius: 10px;
